add app & config; update http
